--- a/main.html
+++ b/main.html
@@ -7,6 +7,20 @@
 </head>
 
 <body>
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" name="name" minlength="3" maxlength="50" required>
+		<br>
+		<label for="portfolio">Portfolio</label>
+		<input type="URl" id="portfolio" name="portfolio" require>
+		<br>
+		<label for="favColor">Favorite Color</label>
+		<input type="color" id="favColor" name="color" >
+		<br>
+		<label for="likeness">Likeness</label>
+		<input type="range" id="likeness" name="likeness" require>
+		<br>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
