--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<input type="text" id="name" name="name" minlength="3" maxlength="50" required>
 		<br>
 		<label for="portfolio">Portfolio</label>
-		<input type="URl" id="portfolio" name="portfolio" require>
+		<input type="url" id="portfolio" name="portfolio" require>
 		<br>
 		<label for="favColor">Favorite Color</label>
 		<input type="color" id="favColor" name="color" >
@@ -20,6 +20,7 @@
 		<label for="likeness">Likeness</label>
 		<input type="range" id="likeness" name="likeness" require>
 		<br>
+		<button type="submit">Submit</button>
 	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
