--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<input type="color" id="favColor" name="color" >
 		<br>
 		<label for="likeness">Likeness</label>
-		<input type="range" id="likeness" name="likeness" require>
+		<input type="range" id="likeness" name="likeness" min="1" max="10" required>
 		<br>
 		<button type="submit">Submit</button>
 	</form>
